Mejoras al diseño

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 
         <!-- BARRA DE NAVEGACIÓN -->
         <nav class="barraNavegacion">
+            <div id ="lblTitulo">
+                <label class="Ubicacion">Certificado Digital</label>
+            </div>
         </nav>
         <!-- FIN BARRA DE NAVEGACIÓN -->
     </section>
