--- a/vista/html/busqueda.html
+++ b/vista/html/busqueda.html
@@ -12,12 +12,15 @@
         <link rel="stylesheet" type="text/css" href="../../vista/css/popups.css"/>
         <link rel="stylesheet" type="text/css" href="../../vista/css/fuentes.css"/>
         <link rel="stylesheet" type="text/css" href="../../vista/css/index.css"/>
+        <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.11/css/jquery.dataTables.min.css">
+        <link rel="stylesheet" type="text/css" href="../css/tabla.css">
         <link rel="shortcut icon" href="../../vista/images/favicon.ico"/>
         <script src="../../includes/jquery-2.0.3.min.js" type="text/javascript" ></script>
         <script src="../../includes/jquery.bpopup.min.js" type="text/javascript"></script>
         <script src="../../vista/js/sesion.js" type="text/javascript"></script>
-        <script src="../../vista/js/index.js" type="text/javascript"></script>
+        <script src="../../vista/js/busqueda.js" type="text/javascript"></script>
         <script src="../../includes/validCampoFranz.js"></script>
+        <script src="//cdn.datatables.net/1.10.11/js/jquery.dataTables.min.js" type="text/javascript"></script>
     </head>
 
     <body>
@@ -63,8 +66,7 @@
                 </div>
                 <div id = "numeroRegistro">
                     <label id = "lblNRegistro" class="titulo azul compacto">Número de Registro</label>
-                    <input id="txtNRegistro" class="campo" type="text" tabindex="1" maxlength="10">
-
+                    <input id="txtNRegistro" class="campo" autofocus type="text" tabindex="1" maxlength="17">
                     <button id="btnConsultar1" class="boton" tabindex="2">Consultar</button>
                 </div>
                 <div id = "numeroDocumento" style="display:none;">
@@ -74,6 +76,7 @@
                     <input id="txtNDocumento" class="campo" type="text" tabindex="2" maxlength="10">
                     <button id="btnConsultar2" class="boton" tabindex="3">Consultar</button>
                 </div>
+                <table id="tablaCertificados" class="display compact" cellspacing="0" width="100%"></table>
             </div>
         </section>
         <!-- FIN CUERPO -->
