Envío de formulario para generar Certificado en lugar de enviar variables por URL

--- a/vista/html/busqueda.html
+++ b/vista/html/busqueda.html
@@ -79,6 +79,22 @@
                 <table id="tablaCertificados" class="display compact" cellspacing="0" width="100%"></table>
             </div>
         </section>
+
+        <section id="CertificadoModulo">
+            <form id="frmCertificadoModulo" method="post" action="../../modelo/certificado.php" target="_blank">
+            <input type="hidden" id="txtCodigoCertificado" name="txtCodigoCertificado"/>
+            <input type="hidden" id="txtFechaCertificado" name="txtFechaCertificado"/>
+            <input type="hidden" id="txtTipoIdentificacion" name="txtTipoIdentificacion"/>
+            <input type="hidden" id="txtNumeroIdentificacion" name="txtNumeroIdentificacion"/>
+            <input type="hidden" id="txtLugarExpedicion" name="txtLugarExpedicion"/>
+            <input type="hidden" id="txtEstudiante" name="txtEstudiante"/>
+            <input type="hidden" id="txtCurso" name="txtCurso"/>
+            <input type="hidden" id="txtModulo" name="txtModulo"/>
+            <input type="hidden" id="txtDuracion" name="txtDuracion"/>
+            <input type="hidden" id="txtConvenio" name="txtConvenio"/>
+            <input type="hidden" id="txtRuta" name="txtRuta"/>
+            </form>
+        </section>
         <!-- FIN CUERPO -->
         
         <!-- FOOTER -->
