Cambios para entrega

--- a/vista/html/busqueda.html
+++ b/vista/html/busqueda.html
@@ -93,6 +93,8 @@
             <input type="hidden" id="txtDuracion" name="txtDuracion"/>
             <input type="hidden" id="txtConvenio" name="txtConvenio"/>
             <input type="hidden" id="txtRuta" name="txtRuta"/>
+            <input type="hidden" id="txtNombreSecretaria" name="txtNombreSecretaria"/>
+            <input type="hidden" id="txtRutaFirma" name="txtRutaFirma"/>
             </form>
         </section>
         <!-- FIN CUERPO -->
