--- a/vista/html/busqueda.html
+++ b/vista/html/busqueda.html
@@ -100,6 +100,8 @@
             <input type="hidden" id="txtRutaFirma" name="txtRutaFirma"/>
             <input type="hidden" id="txtTipoCertificado" name="txtTipoCertificado"/>
             <input type="hidden" id="txtFormatoCertificado" name="txtFormatoCertificado"/>
+            <input type="hidden" id="txtFechaInicial" name="txtFechaInicial"/>
+            <input type="hidden" id="txtFechaFinal" name="txtFechaFinal"/>
             </form>
         </section>
         <!-- FIN CUERPO -->
