Cambio de Logos

--- a/index-ventana.html
+++ b/index-ventana.html
@@ -23,7 +23,7 @@
     <!-- Sección Cabecera -->
     <div id="formaCabeceraAzul"></div>
     <div id="formaRectanguloBlanco"></div>
-    <div id="imgLogoCet"><img src="vista/images/logocet.png" width="299" alt="logocet" /></div>
+    <div id="imgLogoCet"><img src="vista/images/logo-cet2.png" width="299" alt="logocet" /></div>
     <div id="titulo1">Mecanismo De Control</div>
     <div id="titulo2">De La Formación</div>
     <div id="division"></div>
