--- a/vista/html/busqueda.html
+++ b/vista/html/busqueda.html
@@ -102,6 +102,7 @@
             <input type="hidden" id="txtFormatoCertificado" name="txtFormatoCertificado"/>
             <input type="hidden" id="txtFechaInicial" name="txtFechaInicial"/>
             <input type="hidden" id="txtFechaFinal" name="txtFechaFinal"/>
+            <input type="hidden" id="txtLogos" name="txtLogos"/>
             </form>
         </section>
         <!-- FIN CUERPO -->
