Cambio de Logos1

--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<!-- <meta http-equiv="refresh" content="0; url=https://certificados.cetcolsubsidio.edu.co/vista/html/busqueda.html"/> -->
-<meta http-equiv="refresh" content="0; url=https://certificados.cetcolsubsidio.edu.co/index-ventana.html"/>
+<meta http-equiv="refresh" content="0; url=https://certificados.cetcolsubsidio.edu.co/vista/html/busqueda.html"/>
+<!-- <meta http-equiv="refresh" content="0; url=https://certificados.cetcolsubsidio.edu.co/index-ventana.html"/> -->
