--- a/vista/html/busqueda.html
+++ b/vista/html/busqueda.html
@@ -52,7 +52,7 @@
                     <label id="lbltexto">
                         <p align="justify">Por favor escriba el Número de Registro del certificado para realizar la consulta, en caso de no conocerlo utilice la búsqueda por documento, a continuación suministre los datos solicitados, esta opción le permite obtener una lista de los certificados que tiene disponibles para descarga.</p>
                         <p align="justify"><span style = "font-style: italic;"><strong><u>Nota</u></strong></span>: Debe tener instalada la aplicación <span style = "font-style: italic;"><strong><u>Adobe Reader</u></strong></span> para visualizar el Certificado, en caso de no tenerla, puede descargar de <a href="https://get.adobe.com/es/reader/" target="_blank">aquí</a>.</p>
-                        <p align="center">Clic para visualizar el <a href="https://drive.google.com/file/d/1lWnyaCa9o5NXvfiZrdNLXAKpfxmPB-oq/view?usp=sharing" target="_blank">Manual para descargar certificados</a>.</p>
+                        <p align="center">Clic para visualizar el <a href="https://drive.google.com/file/d/11rH56mTgZ0mGnQkfyQJrhlPbA9zoSmaY/view" target="_blank">Manual para descargar certificados</a>.</p>
                     </label>
                 </div>
                 <div style="text-align: center;">
